--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Ankit Ghildiyal
+logo: /assets/img/avatar.jpeg
+description: Ankit is a professional actor and a passionate teacher. Currently, Ankit works as teacher in a public school where he teaches Business and Accountancy to senior students. Apart from a job, Ankit also runs a coaching center named <b>Mr Commerce</b>.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
