--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Ankit Ghildiyal
 logo: /assets/img/avatar.jpeg
-description: (Mr Commerce)
-show_downloads: true
+description: 
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
