--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Ankit Ghildiyal
 logo: /assets/img/avatar.jpeg
-description: 
+description: Actor | Teacher | Model | Dancer | Orator
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
